# context-nexus

./: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  test_key.py
.github/workflows/: ci.yml  release.yml
context_nexus/: __init__.py
context_nexus/agents/: agent.py
context_nexus/core/: nexus.py
context_nexus/ingestion/: __init__.py  embedder.py  loader.py
context_nexus/retrieval/: hybrid.py
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: lib.rs
crates/nexus-core/src/chunk/: mod.rs
docs/: blog.md  quickstart.md  use_cases.md
examples/: 05_benchmark.py  README.md  basic_agent.py  basic_usage.py  workflow_1_document_qa.py  workflow_2_code_analysis.py
tests/: test_agent.py  test_core.py  test_integration.py  test_observability_features.py
