[package]
name = "context-nexus"
version = "0.1.0"
edition = "2021"
license = "MIT"
include = ["crates/**/*", "Cargo.toml", "pyproject.toml", "README.md", "LICENSE"]

[lib]
name = "context_nexus"
crate-type = ["cdylib"]
path = "crates/nexus-core/src/lib.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
