[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "context-nexus"
version = "0.1.0"
description = "SDK for building agentic AI systems"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Chiraag Kakar", email = "connect.with.chiraag@gmail.com"}]
keywords = ["ai", "llm", "rag", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "anyio>=4.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "networkx>=3.0",
    "openai>=1.0",
    "tiktoken>=0.5",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "maturin>=1.4",
]
local = ["sentence-transformers>=2.2"]
production = ["qdrant-client>=1.7", "neo4j>=5.0", "redis>=5.0"]

[project.urls]
Homepage = "https://github.com/chiraag-kakar/context-nexus"
Repository = "https://github.com/chiraag-kakar/context-nexus"

[tool.maturin]
module-name = "context_nexus._core"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
